fixed layout bugs

--- a/src/assets/css/components/_header.css
+++ b/src/assets/css/components/_header.css
@@ -6,7 +6,9 @@
 header {
   padding: var(--header-padding);
   display: flex;
+  display: -webkit-flex;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
   align-items: center;
   background-color: var(--color-secondary);
   color: var(--white);
@@ -24,7 +26,13 @@ header .header-buttons {
   gap: var(--space-sm);
   align-items: center;
   justify-content: center;
+  max-width: min-content;
 }
+
+header .header-buttons > * {
+  max-width: min-content;
+}
+
 header .nav-cta {
   width: unset;
   padding-inline: 1rem;
@@ -49,6 +57,7 @@ nav .mobile-menu-socials {
 }
 
 nav .mobile-menu-book-btn {
+  margin-inline: auto;
   margin-block-end: 2rem;
   width: unset;
   padding-inline: 1rem;
@@ -71,11 +80,11 @@ nav .mobile-menu-book-btn {
     display: none;
   }
 }
-@media screen and (height < 700px) {
+/* @media screen and (height < 700px) {
   nav .mobile-menu-socials {
     display: none;
   }
-}
+} */
 
 .menu {
   display: none;
@@ -197,17 +206,17 @@ nav .mobile-menu-book-btn {
   top: 85px;
   width: 100vw;
   max-width: 430px;
-  height: 100%;
+  min-height: 100svh;
   background-color: var(--color-secondary);
-  overflow: hidden;
-  padding-block-start: var(--space-lg);
+  overflow: scroll;
+  padding-block-start: var(--space-sm);
+  flex-direction: column;
 }
 
 .mobile-menu > div.stick-to-bottom {
   width: 100%;
   max-width: 400px;
-  position: absolute;
-  bottom: 8rem;
+  margin-inline: auto;
 }
 
 .mobile-menu > ul {
@@ -305,21 +314,28 @@ nav .mobile-menu-book-btn {
   }
 }
 
+@media screen and (orientation: landscape) {
+  .mobile-menu {
+    max-width: unset;
+  }
+}
+
 @media screen and (orientation: landscape) and (height < 600px) {
   .mobile-menu {
     overflow: scroll;
   }
   .mobile-menu > ul {
     margin-inline-start: 0;
+    margin-block-end: var(--space-sm);
     flex-direction: row;
     /* padding-block-start: 200px; */
     /* padding-block-end: 150px; */
   }
   .mobile-menu > ul > li {
-    padding: var(--space-sm);
+    padding: var(--space-xs);
   }
   .mobile-menu .sublink {
-    margin-block-start: var(--space-sm);
+    margin-block-start: var(--space-xs);
     padding: var(--space-xs);
   }
   .mobile-menu .submenu {
