--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -34,7 +34,7 @@
 @import "./pages/_404.css";
 
 .show {
-  display: inline-block;
+  display: inline-flex;
 }
 .hide {
   display: none;
